--- a/src/app/pages/board/communityboard/communityboard.page.html
+++ b/src/app/pages/board/communityboard/communityboard.page.html
@@ -28,7 +28,7 @@
     </ion-menu-toggle>
     <ion-title>News</ion-title>
     <!--add new featured topic-->
-    <ion-item lines="none" routerLink="/app/user/profile" *ngIf="userData.user && platform.width() >= 768" slot="end">
+    <ion-item lines="none" routerLink="/app/user/profile" *ngIf="userData.user && platform.width() >= 768" slot="end" mode="md" style="--background: transparent">
       <ion-avatar slot="start">
         <ion-img *ngIf="userData.user && userData.user.avatar" [src]="userData.user.avatar"></ion-img>
         <ion-img *ngIf="!userData.user || !userData.user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
