--- a/src/app/pages/discover/discover/discover.page.html
+++ b/src/app/pages/discover/discover/discover.page.html
@@ -29,7 +29,7 @@
     <ion-title *ngIf="!userData.defaultProgram">Discover</ion-title>
     <!--<ion-title *ngIf="userData.defaultProgram && platform.width() >= 768">Dashboard</ion-title>-->
     <ion-title *ngIf="userData.defaultProgram">{{userData.defaultProgram.matrix_string[0][0]}}</ion-title>
-    <ion-item lines="none" routerLink="/app/user/profile" *ngIf="userData.user && platform.width() >= 768" slot="end">
+    <ion-item lines="none" routerLink="/app/user/profile" *ngIf="userData.user && platform.width() >= 768" slot="end" mode="md" style="--background: transparent">
       <ion-avatar slot="start">
         <ion-img *ngIf="userData.user && userData.user.avatar" [src]="userData.user.avatar"></ion-img>
         <ion-img *ngIf="!userData.user || !userData.user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
