--- a/src/app/pages/user/dashboard/dashboard.page.scss
+++ b/src/app/pages/user/dashboard/dashboard.page.scss
@@ -540,8 +540,8 @@ app-dashboard {
   }
 
   .program-slides {
-    padding: 0 5px 10px 0;
-    background-color: var(--ion-color-secondary);
+    padding: 10px 0;
+    background-color: transparent;
   }
 
   .program-slide {
