--- a/src/app/pages/group/groupchat/groupchat.page.html
+++ b/src/app/pages/group/groupchat/groupchat.page.html
@@ -345,7 +345,7 @@
         <div class="chat-bubble right" slot="end" *ngIf="!message.moment && message.body?.length > 0">
           <!-- Attachments inside a quote -->
           <div class="quote-bubble right ion-text-wrap" *ngIf="message.quote && (message.quote.body || (message.quote.attachments && message.quote.attachments.length > 0))">
-            <ion-label color="dark" class="message" *ngIf="message.quote.body" [innerHTML]="message.quote.body | nl2br"></ion-label>
+            <div color="dark" class="message" *ngIf="message.quote.body" [innerHTML]="message.quote.body | nl2br"></div>
             <!--Multiple attachments-->
             <ion-grid *ngIf="message.quote.attachments && message.quote.attachments.length > 0">
               <ion-row class="ion-no-padding">
