--- a/src/app/pages/feature/manage/managefeature.page.html
+++ b/src/app/pages/feature/manage/managefeature.page.html
@@ -4,7 +4,7 @@
       <ion-button fill="clear" color="grey">
         <ion-icon name="menu"></ion-icon>
       </ion-button>
-      <ion-badge *ngIf="this.chatService && this.chatService.connectTabBadge" color="primary" mode="md">{{this.chatService.connectTabBadge}}</ion-badge>
+      <ion-badge *ngIf="this.chatService && this.chatService.connectTabBadge" mode="md">{{this.chatService.connectTabBadge}}</ion-badge>
     </ion-menu-toggle>
     <ion-buttons *ngIf="modalPage || platform.width() >= 768" slot="start">
       <ion-button (click)="closeModal(false)">
