--- a/src/app/pages/feature/pickpeople-popover/pickpeople-popover.page.html
+++ b/src/app/pages/feature/pickpeople-popover/pickpeople-popover.page.html
@@ -39,9 +39,18 @@
 <ion-content>
   <ion-list>
     <ion-list-header *ngIf="hasOrganizerAccess">Friends</ion-list-header>
+    <ion-item (click)="selectFriend(this.selfConversationObj)" *ngIf="selfConversationObj && includeSelf">
+      <ion-avatar slot="start">
+        <ion-img *ngIf="userData.user.avatar" [src]="userData.user.avatar"></ion-img>
+        <ion-img *ngIf="!userData.user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
+      </ion-avatar>
+      {{userData.user.first_name}} {{userData.user.last_name}}
+      <ion-icon slot="end" color="tertiary" *ngIf="!this.selfConversationObj.select" name="radio-button-off"></ion-icon>
+      <ion-icon slot="end" color="tertiary" *ngIf="this.selfConversationObj.select" name="checkmark-circle"></ion-icon>
+    </ion-item>
     <ion-virtual-scroll [items]="conversations" approxItemHeight="60px">
       <div *virtualItem="let obj">
-        <ion-item (click)="selectFriend(obj)" *ngIf="(filter === 'connect' || filter === 'both') && (obj.conversation.type === 'connect' ||  (obj.conversation.type === 'self' && includeSelf))">
+        <ion-item (click)="selectFriend(obj)" *ngIf="(filter === 'connect' || filter === 'both') && (obj.conversation.type === 'connect')">
           <ion-avatar slot="start">
             <ion-img *ngIf="obj.data.participant.avatar" [src]="obj.data.participant.avatar"></ion-img>
             <ion-img *ngIf="!obj.data.participant.avatar" src="assets/img/avatar-default.jpg"></ion-img>
