improve css, clean up unused code
1.8.7 (1)

--- a/src/app/pages/connect/videoconference/videoconference.page.html
+++ b/src/app/pages/connect/videoconference/videoconference.page.html
@@ -25,8 +25,8 @@
     <div id="videoConference" *ngIf="!videoEnded"></div>
     <ion-grid style="height: 100%" *ngIf="videoEnded">
       <ion-row class="ion-justify-content-center ion-align-items-center" style="height: 100%">
-        <ion-list>
-          <ion-row class="ion-justify-content-center ion-margin-bottom">
+        <ion-list class="ion-padding">
+          <ion-row class="ion-justify-content-center ion-margin">
             <ion-label>Your Have Left the Video Session</ion-label>
           </ion-row>
           <ion-row class="ion-justify-content-center">
