--- a/src/app/pages/manage/managecommunities/managecommunities.page.html
+++ b/src/app/pages/manage/managecommunities/managecommunities.page.html
@@ -24,7 +24,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content *ngIf="userData && userData.currentCommunityAdminStatus" forceOverscroll="false">
+<ion-content *ngIf="userData && userData.restvoStaffAccess" forceOverscroll="false">
   <ion-grid>
     <ion-row>
       <ion-col size-xs="12" size-sm="12" size-md="3" size-lg="3">
