--- a/src/app/pages/feature/manage/managefeature.page.html
+++ b/src/app/pages/feature/manage/managefeature.page.html
@@ -11,7 +11,19 @@
         <ion-icon name="chevron-back-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title id="show-event-title" *ngIf="moment && moment.matrix_string" class="ion-text-wrap">{{moment.matrix_string[0][0]}}</ion-title>
+    <ion-title id="show-event-title" *ngIf="userData.currentManageActivityId && userData.activitiesWithAdminAccess" class="ion-text-wrap">
+      <ion-select [(ngModel)]="userData.currentManageActivityId" (ionChange)="userData.changeManageActivity($event)" interface="popover">
+        <div *ngFor="let activity of userData.activitiesWithAdminAccess">
+          <ion-select-option [value]="activity._id" *ngIf="activity.categories.includes('5c915324e172e4e64590e346')">{{activity.name}}</ion-select-option>
+        </div>
+        <div *ngFor="let activity of userData.activitiesWithAdminAccess">
+          <ion-select-option [value]="activity._id" *ngIf="activity.categories.includes('5c915475e172e4e64590e348')">{{activity.name}}</ion-select-option>
+        </div>
+        <div *ngFor="let activity of userData.activitiesWithAdminAccess">
+          <ion-select-option [value]="activity._id" *ngIf="activity.categories.includes('5dfdbb547b00ea76b75e5a70')">{{activity.name}}</ion-select-option>
+        </div>
+     </ion-select>
+    </ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="edit()">{{resource['en-US'].value[18]}}</ion-button> <!--Edit-->
     </ion-buttons>
